[package]
name = "learning-beta-dist-fitting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
opener = "0.6.1"
plotters = "0.3.5"
statrs = "0.16.0"
tempfile = "3.8.0"
